# inamorata

./: .clang-tidy  .gitmodules  .vanity.schema.yml  .vanity.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
include/inamorata/: inamorata.h  validation.h  validator.h
libs/: CMakeLists.txt
src/: schema.cpp  schema.h  test.cpp  validation.cpp  validator.cpp
